#0007344: 配分処理　商品ＪＡＮダブりで【商品選択】ウィンドウが表示されましたが、小見出しの「予定総個数」→「総個数」、「予定箱」→「箱数」、「予定バラ」→「バラ数」にして下さい。 #0007343: 配分処理　商品ＪＡＮダブりで【商品選択】ウィンドウが表示されましたが、「受注便」「出荷バッチ」に商品ＪＡＮが表示されます。 #0007336: 配分処理　一斉仕分で４色を使って配分している時に、赤と黄で表示器のボタンを押下するとエラーメッセージが表示されます。 #0007340:進捗照会　一つの仕分グループを配分完了（個数進捗率100%）になったが【仕分未完了一覧】に残ったままです。【仕分完了一覧】側へ移動して下さい。

--- a/src/Picking/Views/DistInfoWindow.xaml
+++ b/src/Picking/Views/DistInfoWindow.xaml
@@ -116,7 +116,8 @@
                   AlternatingRowBackground="{StaticResource AlternateDisplayGridBrush}">
 
             <DataGrid.Columns>
-                <DataGridTextColumn Header="状態" Width="Auto" Binding="{Binding DStatus_name}"  ElementStyle="{StaticResource LeftTextElement}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="配分&#xa;状態" Width="Auto" Binding="{Binding DStatus_name}"  ElementStyle="{StaticResource LeftTextElement}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="大分&#xa;状態" Width="Auto" Binding="{Binding LStatus_name}"  ElementStyle="{StaticResource LeftTextElement}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="品番" Width="Auto" Binding="{Binding CdHimban}"  ElementStyle="{StaticResource LeftTextElement}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="JANｺｰﾄﾞ" Width="Auto" Binding="{Binding CdGtin13}"  ElementStyle="{StaticResource LeftTextElement}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="品名" Width="Auto" Binding="{Binding NmHinSeishikimei}" IsReadOnly="True">
