--- a/src/Picking/Views/SelectItemDlg.xaml
+++ b/src/Picking/Views/SelectItemDlg.xaml
@@ -20,16 +20,16 @@
         <Grid DockPanel.Dock="Top" Margin="5,5,20,5">
             <Grid.RowDefinitions>
                 <RowDefinition Height="1*"/>
-                <RowDefinition Height="5*"/>
+                <RowDefinition Height="1*"/>
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="5*"/>
+                <ColumnDefinition Width="8*"/>
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
 
-            <TextBlock Grid.Row="0" Grid.Column="0" Text="{Binding CdGtin13,StringFormat=商品ＪＡＮ：{0}}" HorizontalAlignment="Left" VerticalAlignment="Center" TextAlignment="Center" Margin="3"/>
-            <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Horizontal" Height="300">
+            <TextBlock Grid.Row="0" Grid.Column="0" Text="{Binding CdGtin13,StringFormat=商品ＪＡＮ：{0}}" HorizontalAlignment="Left" VerticalAlignment="Center" TextAlignment="Center" Margin="3" MinHeight="40"/>
+            <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Horizontal" MinHeight="400">
                 <controls:GridColumnSetting TargetGrid="{Binding ElementName=distselectitemgrid}" SettingsKey="GridSelectItemColumns"/>
                 <DataGrid x:Name="distselectitemgrid" ItemsSource="{Binding SelectItems}" CurrentItem="{Binding CurrentSelectItem, Mode=TwoWay}"
                   SelectedItem="{Binding CurrentSelectItem, Mode=TwoWay}"
@@ -38,28 +38,28 @@
                   HorizontalScrollBarVisibility="Visible"
                   VerticalScrollBarVisibility="Visible"                          
                   AutoGenerateColumns="False" IsReadOnly="True"
-                  AlternatingRowBackground="{StaticResource AlternateDisplayGridBrush}">
+                  AlternatingRowBackground="{StaticResource AlternateDisplayGridBrush}" Width="1197">
 
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="状態" Width="Auto" Binding="{Binding DStatus_name}" IsReadOnly="True"/>
                         <DataGridTextColumn Header="品番" Width="Auto" Binding="{Binding CdHimban}" IsReadOnly="True"/>
                         <DataGridTextColumn Header="品名" Width="Auto" Binding="{Binding NmHinSeishikimei}" IsReadOnly="True"/>
-                        <DataGridTextColumn Header="受注便" Width="Auto" Binding="{Binding CdGtin13}" IsReadOnly="True"/>
-                        <DataGridTextColumn Header="出荷ﾊﾞｯﾁ" Width="Auto" Binding="{Binding CdGtin13}" IsReadOnly="True"/>
+                        <DataGridTextColumn Header="受注便" Width="Auto" Binding="{Binding CdJuchuBin}" IsReadOnly="True"/>
+                        <DataGridTextColumn Header="出荷ﾊﾞｯﾁ" Width="Auto" Binding="{Binding CdShukkaBatch}" IsReadOnly="True"/>
                         <DataGridTextColumn Header="入数" Width="Auto" Binding="{Binding NuBoxUnit}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
-                        <DataGridTextColumn Header="予定総個数" Width="Auto" Binding="{Binding Ops}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
-                        <DataGridTextColumn Header="予定箱" Width="Auto" Binding="{Binding Display_Dops_Cs}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
-                        <DataGridTextColumn Header="予定ﾊﾞﾗ" Width="Auto" Binding="{Binding Display_Dops_Ps}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
+                        <DataGridTextColumn Header="総個数" Width="Auto" Binding="{Binding Ops}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
+                        <DataGridTextColumn Header="箱数" Width="Auto" Binding="{Binding Display_Dops_Cs}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
+                        <DataGridTextColumn Header="バラ数" Width="Auto" Binding="{Binding Display_Dops_Ps}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
                     </DataGrid.Columns>
                 </DataGrid>
             </StackPanel>
             <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical">
-                <Button Command="{Binding OnUp}" Focusable="False"  Height="150" Margin="5">
+                <Button Command="{Binding OnUp}" Focusable="False"  MinHeight="200" Margin="5">
                     <Viewbox>
                         <TextBlock Text="▲"/>
                     </Viewbox>
                 </Button>
-                <Button Command="{Binding OnDown}" Focusable="False"  Height="150"  Margin="5">
+                <Button Command="{Binding OnDown}" Focusable="False"  MinHeight="200"  Margin="5">
                     <Viewbox>
                         <TextBlock Text="▼"/>
                     </Viewbox>
@@ -68,7 +68,7 @@
         </Grid>
 
         <StackPanel Orientation="Horizontal" Margin="5" DockPanel.Dock="Bottom" HorizontalAlignment="Center">
-            <Button Width="150" Command="{Binding Save}" Margin="0 0 20 0"
+            <Button Width="150" Command="{Binding Save}" Margin="0 0 20 0"  Height="60"
                     Focusable="false">
                 <StackPanel Orientation="Horizontal">
                     <materialDesign:PackIcon Kind="Check" Margin="0,0,5,0" VerticalAlignment="Center"/>
@@ -76,7 +76,7 @@
                 </StackPanel>
             </Button>
 
-            <Button Width="150" Command="{Binding Cancel}"
+            <Button Width="150" Command="{Binding Cancel}"  Height="60"
                     Focusable="false" IsCancel="True">
                 <StackPanel Orientation="Horizontal">
                     <materialDesign:PackIcon Kind="Cancel" Margin="0,0,5,0" VerticalAlignment="Center"/>
