積付表発行:ID=7356 積付数変更画面に作業社員コードリスト追加。DB更新内容追加

--- a/src/StowageListPrint/Views/InputStowageDlg.xaml
+++ b/src/StowageListPrint/Views/InputStowageDlg.xaml
@@ -95,6 +95,11 @@
                     <TextBox Text="{Binding NewEtcBoxPs, UpdateSourceTrigger=PropertyChanged, TargetNullValue=''}"/>
                 </StackPanel>
 
+                <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="0,30,0,0">
+                    <Label Content="作業社員コード ： "/>
+                    <ComboBox MinWidth="50" SelectedIndex="{Binding SelectShainIndex}" ItemsSource="{Binding ShainList}" DisplayMemberPath="DispName"/>
+                </StackPanel>
+
                 <TextBlock Text="{Binding ErrorMessage}" Foreground="Red" Margin="5" Width="auto"/>
             </StackPanel>
         </StackPanel>
