--- a/src/DistProg/Views/DistUncompleted.xaml
+++ b/src/DistProg/Views/DistUncompleted.xaml
@@ -101,8 +101,9 @@
                                 <Grid>
                                     <ProgressBar Maximum="{Binding NuOps}" Minimum="0" Value="{Binding NuRps}"
                                                  HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch"
+                                                 Style="{StaticResource MahApps.Styles.ProgressBar}"
                                                  Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=Height}" />
-                                    <TextBlock Text="{Binding NuProg, StringFormat={}{0:P0}}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                    <TextBlock Text="{Binding NuProg}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                                 </Grid>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
