--- a/src/Picking/Views/DistInfoWindow.xaml
+++ b/src/Picking/Views/DistInfoWindow.xaml
@@ -113,7 +113,21 @@
                   SelectedItem="{Binding CurrentDistInfo, Mode=TwoWay}"
                   CanUserAddRows="False" SelectionMode="Single"
                   AutoGenerateColumns="False" IsReadOnly="True"
-                  AlternatingRowBackground="{StaticResource AlternateDisplayGridBrush}">
+                  SelectionUnit="FullRow">
+            
+            <DataGrid.ItemContainerStyle>
+                <Style TargetType="DataGridRow">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding DStatus}" Value="1">
+                            <Setter Property="Background" Value="Yellow"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding DStatus}" Value="2">
+                            <Setter Property="Background" Value="#00ff00"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </DataGrid.ItemContainerStyle>
+
 
             <DataGrid.Columns>
                 <DataGridTextColumn Header="配分&#xa;状態" Width="Auto" Binding="{Binding DStatus_name}"  ElementStyle="{StaticResource LeftTextElement}" IsReadOnly="True"/>
