--- a/src/Picking/Views/DistItemScanWindow.xaml
+++ b/src/Picking/Views/DistItemScanWindow.xaml
@@ -159,8 +159,8 @@
                 <DataGridTextColumn Header="出荷&#xa;ﾊﾞｯﾁ" Width="Auto" Binding="{Binding CdShukkaBatch}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="入数" Width="Auto" Binding="{Binding Display_Csunit}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="予定&#xa;総個数" Width="Auto" Binding="{Binding Display_Ops}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="通路&#xa;左" Width="Auto" Binding="{Binding DisplayLeftPs_cnt}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="通路&#xa;右" Width="Auto" Binding="{Binding DisplayRightPs_cnt}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="通路&#xa;左" Width="Auto" Binding="{Binding DisplayRightPs_cnt}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="通路&#xa;右" Width="Auto" Binding="{Binding DisplayLeftPs_cnt}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="予定&#xa;箱" Width="Auto" Binding="{Binding Display_Dops_Cs}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="予定&#xa;ﾊﾞﾗ" Width="Auto" Binding="{Binding Display_Dops_Ps}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="残&#xa;箱" Width="Auto" Binding="{Binding Display_Ddps_Cs}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
