--- a/src/Picking/Views/DistItemScanWindow.xaml
+++ b/src/Picking/Views/DistItemScanWindow.xaml
@@ -137,6 +137,7 @@
                             </TextBox.InputBindings>
                          </TextBox>
                         <TextBlock Text="{Binding DistColorInfo.DistWorkTypeName, Mode=OneWay}" Background="{Binding ColorBack}" Foreground="{Binding ColorText}" FontSize="50" FontWeight="Bold"  Margin="50,0,0,0"/>
+                        <TextBlock Text="{Binding ErrMsg, Mode=OneWay}" Foreground="Red" FontWeight="Bold"  Margin="10,0,0,0"/>
                     </StackPanel>
                 </StackPanel>
             </Grid>
