②追駆けで「開始表示器」に「Ｇｏ」が出て数量表示器が点灯しますが、 　時々「Go」が出ずに空白のまま点滅する事が多々あります。 　特に2色目を開始して「開始表示器」が点滅して空白になる事が多いです。 　数量表示器を消していっても２色目が「Go」になりません。 　ログに何度も同じようになっていますので確認して下さい。 ⑦配分処理で商品をスキャンしてエラーになった時メッセージウインドウを止めてエラーメッセージフィールドを設定し表示するように変更
②追駆けは一度開始表示器を押下して作業すると次の作業も前回の順番通りにしか開始表示器に
　「Go」がでません。

--- a/src/Picking/Views/DistItemScanWindow.xaml
+++ b/src/Picking/Views/DistItemScanWindow.xaml
@@ -136,8 +136,8 @@
                                 <KeyBinding Key="F8" Command="{Binding OnStart}"/>
                             </TextBox.InputBindings>
                          </TextBox>
-                        <TextBlock Text="{Binding DistColorInfo.DistWorkTypeName, Mode=OneWay}" Background="{Binding ColorBack}" Foreground="{Binding ColorText}" FontSize="50" FontWeight="Bold"  Margin="50,0,0,0"/>
-                        <TextBlock Text="{Binding ErrMsg, Mode=OneWay}" Foreground="Red" FontWeight="Bold"  Margin="10,0,0,0"/>
+                        <TextBlock Text="{Binding DistColorInfo.DistWorkTypeName, Mode=OneWay}" Background="{Binding ColorBack}" Foreground="{Binding ColorText}" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="24" Margin="10,0,0,0"/>
+                        <TextBlock Text="{Binding ErrMsg, Mode=OneWay}" Foreground="Red" FontWeight="Bold" FontSize="30" Margin="10,0,0,0" MinHeight="80"/>
                     </StackPanel>
                 </StackPanel>
             </Grid>
