ＥＮＤ点灯時間を3秒→１．５秒 箱イリスう変更画面追加

--- a/src/Picking/Views/DistItemScanWindow.xaml
+++ b/src/Picking/Views/DistItemScanWindow.xaml
@@ -94,6 +94,12 @@
                                 </StackPanel>
                             </Button>
 
+                            <Button Command="{Binding OnChangeBoxUnit}">
+                                <StackPanel Orientation="Vertical">
+                                    <materialDesign:PackIcon Kind="EditBox"/>
+                                    <TextBlock Text="箱数変更"/>
+                                </StackPanel>
+                            </Button>
 
                             <Button Command="{Binding OnShowDetailInfo}">
                                 <StackPanel Orientation="Vertical">
