大仕分け １．箱入数を変更した場合ＤＢへ箱入り数ＤＢ更新するように修正 ２．ブロック別大仕分で箱入数を変更した時、同じ商品の別ブロック箱入り数も同時に変更するように修正 ３．商品別大仕分で箱入数を変更した時、一旦別商品に移動後、再度箱入数を変更した商品に戻ると箱入数が修正前に戻る不具合修正 ４．数量、箱入数の入力桁を制限

--- a/src/LargeDist/Views/ModifyBoxUnitDialog.xaml
+++ b/src/LargeDist/Views/ModifyBoxUnitDialog.xaml
@@ -16,8 +16,12 @@
 
     <StackPanel Orientation="Vertical">
         <StackPanel.Resources>
-            <Style TargetType="TextBlock">
-                <Setter Property="Margin" Value="0,0,30,0"/>
+            <Style TargetType="TextBox">
+                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                <Setter Property="Margin" Value="20,0,0,0"/>
+                <Setter Property="Width" Value="70"/>
             </Style>
         </StackPanel.Resources>
 
@@ -42,7 +46,7 @@
             <TextBlock VerticalAlignment="Center">
                     箱入数：<Run Text="{Binding NuBoxUnit}"/>　⇒
             </TextBlock>
-            <TextBox Text="{Binding Value,UpdateSourceTrigger=PropertyChanged, Delay=100}" Width="100" HorizontalContentAlignment="Right" x:Name="Value" >
+            <TextBox Text="{Binding Value,UpdateSourceTrigger=PropertyChanged, Delay=100}" Width="100" MaxLength="4" HorizontalContentAlignment="Right" x:Name="Value" >
                 <i:Interaction.Behaviors>
                     <b:NumericTextBoxBehavior/>
                     <b:SelectTextOnGotFocusTextBoxBehavior/>
