--- a/src/LargeDist/Views/ModifyQtyDialog.xaml
+++ b/src/LargeDist/Views/ModifyQtyDialog.xaml
@@ -16,8 +16,12 @@
 
     <StackPanel Orientation="Vertical">
         <StackPanel.Resources>
-            <Style TargetType="TextBlock">
-                <Setter Property="Margin" Value="0,0,30,0"/>
+            <Style TargetType="TextBox">
+                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                <Setter Property="Margin" Value="20,0,0,0"/>
+                <Setter Property="Width" Value="70"/>
             </Style>
         </StackPanel.Resources>
 
@@ -82,7 +86,7 @@
             
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,20">
             <Label Content="実績数："/>
-            <TextBox Text="{Binding Box,UpdateSourceTrigger=PropertyChanged, Delay=100}" Width="100" HorizontalContentAlignment="Right" x:Name="Piece" >
+            <TextBox Text="{Binding Box,UpdateSourceTrigger=PropertyChanged, Delay=100}" Width="100" MaxLength="5" HorizontalContentAlignment="Right" x:Name="Piece" >
                 <i:Interaction.Behaviors>
                     <b:NumericTextBoxBehavior/>
                     <b:SelectTextOnGotFocusTextBoxBehavior/>
@@ -90,7 +94,7 @@
             </TextBox>
             <Label Content="箱"/>
 
-            <TextBox Text="{Binding Piece, UpdateSourceTrigger=PropertyChanged, Delay=100}" Width="100" HorizontalContentAlignment="Right" >
+            <TextBox Text="{Binding Piece, UpdateSourceTrigger=PropertyChanged, Delay=100}" Width="100" MaxLength="5" HorizontalContentAlignment="Right" >
                 <i:Interaction.Behaviors>
                     <b:NumericTextBoxBehavior/>
                     <b:SelectTextOnGotFocusTextBoxBehavior/>
