0007380:仕分リスト発行　『得意先別個数』ボタンを『商品別』と『終了』の間に追加して下さい。『得意先別個数』ボタンを押下して【得意先別総個数集計リスト】を発行して下さい。（Ａ４縦で印刷）

--- a/src/DistListPrint/Views/MainDistListPrint.xaml
+++ b/src/DistListPrint/Views/MainDistListPrint.xaml
@@ -69,6 +69,13 @@
                         </StackPanel>
                     </Button>
 
+                    <Button Command="{Binding CustomerUnitReportPrint}">
+                        <StackPanel Orientation="Vertical">
+                            <materialDesign:PackIcon Kind="Printer"/>
+                            <TextBlock Text="得意先別個数"/>
+                        </StackPanel>
+                    </Button>
+
                     <Button Command="{Binding Exit}">
                         <StackPanel Orientation="Vertical">
                             <materialDesign:PackIcon Kind="ExitToApp"/>
