②出荷実績データ送信（DistExpoter.exe） 　「納品日」を指定して画面を表示していますが、「納品日指定」のウィンドウを出さないで 　画面表示して下さい。 　画面の「送信」と「仕分G」の間に「納品日」を表示して下さい。 　「納品日＋仕分けG」で行を表示して下さい。 　未送信のものは無条件に表示して下さい。（チェックを入れる） 　送信済みのものは「納品日」がシステム日付より古いものは表示しないで下さい。 　ソート順は「納品日・仕分G」に並べて下さい。

--- a/src/DistExporter/Views/MainDistExporter.xaml
+++ b/src/DistExporter/Views/MainDistExporter.xaml
@@ -61,10 +61,6 @@
             </ToolBar>
         </ToolBarTray>
 
-        <TextBlock DockPanel.Dock="Top" Margin="10" VerticalAlignment="Center">
-            納品日：<Run Text="{Binding DtDelivery, StringFormat=yyyy年MM月dd日}" d:Text="2023年12月12日"/>
-        </TextBlock>
-
         <controls:GridColumnSetting TargetGrid="{Binding ElementName=dataGrid}" SettingsKey="DistExporterColumns"/>
         <DataGrid x:Name="dataGrid" ItemsSource="{Binding Items}"
                   AutoGenerateColumns="False"
@@ -85,6 +81,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 <DataGridTextColumn Header="送信" Binding="{Binding SendStatusText}"/>
+                <DataGridTextColumn Header="納品日" Binding="{Binding DtDelivery, StringFormat=yyyy/MM/dd}"/>
                 <DataGridTextColumn Header="仕分G" Binding="{Binding CdDistGroup}"/>
                 <DataGridTextColumn Header="仕分G名" Binding="{Binding NmDistGroup}"/>
                 <DataGridTextColumn Header="得意先数" Binding="{Binding CustomerCount}" ElementStyle="{StaticResource RightTextElement}"/>
