集約得意先登録:mail=0220 参照日手入力後にエンターを押さず「参照」ボタンを押すと、日付が確定されず参照されない件に対応
・Focusable="False"を削除

--- a/src/Customer/Views/InputCustomer.xaml
+++ b/src/Customer/Views/InputCustomer.xaml
@@ -121,7 +121,7 @@
 
                         <Label Grid.Column="0" Content="参照日"/>
                         <models:DatePickerEx Grid.Column="1" x:Name="ReferenceDate" SelectedDate="{Binding ReferenceDate}"/>
-                        <Button Grid.Column="2" Content="参照" Command="{Binding Refer}" Margin="3" Focusable="False" IsEnabled="{Binding IsEdit}"
+                        <Button Grid.Column="2" Content="参照" Command="{Binding Refer}" Margin="3" IsEnabled="{Binding IsEdit}"
                                 Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=Height}" Width="80"/>
                     </Grid>
 
